<?xml version="1.0"?>
<package format="2">
  <name>wreadinput</name>
  <version>0.0.0</version>
  <description>Wisconsin Robotics input device library</description>
  <maintainer email="egeng@wisc.edu">E. Geng</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>wready</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>wready</exec_depend>

  <export>
  </export>
</package>
